Shape Keys not working as expected #30290

Closed
opened 2012-02-21 18:52:28 +01:00 by Hans Erickson · 5 comments

%%%Machine - HP p6230y - AMD Phenon II X4 810 Quad Core 8gb memory
Graphics - Nvidia GForce 9500
OS - Ubuntu 11.10
Revision 44297 built with make using all default values

Simple cube added and subdivided several times
Basis Shape key added
First key added "First Shape" and a shape applied (Simple extrusion from the top of the cube)
Second Key added with first key selected and set to zero - still has shape mixed in and not a default value Key name "Not Default"
Third Key added with basis selected and hit the plus sign - still has shape mixed in and not a default value Key name "Not Default.001"
Fourth key added with basis selected and then selecting "New Shape from Mix" Now the key has no values mixed in and is in a default state

This is not behaving as in the past. Sorry if I chose the wrong category but figured tools was the best option atm.

I could not find any posts on this where this is a new way to add shape keys so I expect it is a bug

Hans B Erickson %%%

%%%Machine - HP p6230y - AMD Phenon II X4 810 Quad Core 8gb memory Graphics - Nvidia GForce 9500 OS - Ubuntu 11.10 Revision 44297 built with make using all default values Simple cube added and subdivided several times Basis Shape key added First key added "First Shape" and a shape applied (Simple extrusion from the top of the cube) Second Key added with first key selected and set to zero - still has shape mixed in and not a default value Key name "Not Default" Third Key added with basis selected and hit the plus sign - still has shape mixed in and not a default value Key name "Not Default.001" Fourth key added with basis selected and then selecting "New Shape from Mix" Now the key has no values mixed in and is in a default state This is not behaving as in the past. Sorry if I chose the wrong category but figured tools was the best option atm. I could not find any posts on this where this is a new way to add shape keys so I expect it is a bug Hans B Erickson %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%OK I did a bit of testing with different revisions and I believe it is a bmesh problem

I used revision 44153 from daily builds and had no issues and was able to add a new empty key without any problem by selecting key 1 and with it set to zero hit the plus sign for a new key which was empty of any influence

then i pulled a build from graphicall revision 44280 which included bmesh from trunk and had the same results as supplied from my example

Hans Erickson%%%

%%%OK I did a bit of testing with different revisions and I believe it is a bmesh problem I used revision 44153 from daily builds and had no issues and was able to add a new empty key without any problem by selecting key 1 and with it set to zero hit the plus sign for a new key which was empty of any influence then i pulled a build from graphicall revision 44280 which included bmesh from trunk and had the same results as supplied from my example Hans Erickson%%%

%%%Will check this one.%%%

%%%Will check this one.%%%

%%%Fixed in svn rev44321. Thanks for the report, closing.%%%

%%%Fixed in svn rev44321. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#30290
No description provided.